# rusty

./: .gitignore  README.md
.specify/features/symphony-rust/: plan.md  spec.md  tasks.md
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  update-agent-context.sh
rust/: .editorconfig  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  WORKFLOW.md  deny.toml  sessions.json
rust/src/: cli.rs  dashboard.rs  lib.rs  logging.rs  main.rs  ports.rs  prompt.rs  tui.rs
rust/src/agent/: acp_client.rs  dynamic_tool.rs  log_parser.rs  mod.rs
rust/src/config/: mod.rs  schema.rs
rust/src/orchestrator/: mod.rs  state.rs
rust/src/server/: api.rs  dashboard.rs  mod.rs
rust/src/session/: mod.rs
rust/src/tracker/: memory.rs  mod.rs
rust/src/tracker/github/: adapter.rs  client.rs  issue.rs  mod.rs
rust/src/workflow/: mod.rs  store.rs
rust/src/workspace/: hooks.rs  mod.rs  path_safety.rs
rust/tests/: acp_client_test.rs  agent_runner_test.rs  api_test.rs  cli_test.rs  config_test.rs  dashboard_test.rs  dynamic_tool_test.rs  e2e_test.rs  github_tracker_test.rs  log_parser_test.rs  logging_init_file.rs  logging_init_stderr.rs  noop_dispatch_test.rs  orchestrator_test.rs  prompt_test.rs  session_persistence_test.rs  tracker_test.rs  workflow_test.rs  workspace_test.rs
