[package]
name = "symphony"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
liquid = "0.26"
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
dirs = "5"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"

[profile.release]
lto = true
strip = true
